--- a/worker/deno.json
+++ b/worker/deno.json
@@ -8,13 +8,11 @@
     }
   },
   "fmt": {
-    "options": {
-      "useTabs": false,
-      "lineWidth": 100,
-      "indentWidth": 2
-    }
+    "useTabs": false,
+    "lineWidth": 100
   }
 }
+
 
 
 
