--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "@supabase/supabase-js": "^2.90.1",
     "next": "16.1.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "stripe": "^20.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
