--- a/web/package.json
+++ b/web/package.json
@@ -19,10 +19,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
-
