--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "stripe": "^20.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
