--- a/web/package.json
+++ b/web/package.json
@@ -2,12 +2,14 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
+
   "scripts": {
     "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "eslint"
   },
+
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "next": "16.1.2",
@@ -15,6 +17,7 @@
     "react-dom": "19.2.3",
     "stripe": "^20.2.0"
   },
+
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
