--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
 
   "scripts": {
     "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
-    "build": "next build",
+    "build": "cross-env NEXT_DISABLE_TURBOPACK=1 next build",
     "start": "next start -p $PORT",
     "lint": "eslint"
   },
@@ -32,3 +32,5 @@
     "typescript": "^5"
   }
 }
+
+
