--- a/web/package.json
+++ b/web/package.json
@@ -3,13 +3,9 @@
   "version": "0.1.0",
   "private": true,
 
-  "engines": {
-    "node": ">=18"
-  },
-
   "scripts": {
-    "dev": "cross-env NEXT_DISABLE_TURBOPACK=1 next dev",
-    "build": "cross-env NEXT_DISABLE_TURBOPACK=1 next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start -p $PORT",
     "lint": "eslint"
   },
@@ -28,7 +24,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.23",
-    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "postcss": "^8.5.6",
@@ -36,6 +31,4 @@
     "typescript": "^5"
   }
 }
-
-
 
