--- a/worker/dockerfile
+++ b/worker/dockerfile
@@ -11,4 +11,6 @@ COPY . .
 
 EXPOSE 8000
 
-CMD ["run", "--allow-net", "--allow-read", "--allow-env", "main.ts"]
+CMD ["deno","run","--allow-net","--allow-env","--allow-read","--allow-write=/tmp","main.ts"]
+
+
