--- a/web/package.json
+++ b/web/package.json
@@ -2,22 +2,20 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "eslint"
   },
-
   "dependencies": {
+    "@sentry/nextjs": "^10.38.0",
     "@supabase/supabase-js": "^2.90.1",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.2.0"
   },
-
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
@@ -31,4 +29,3 @@
     "typescript": "^5"
   }
 }
-
