--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.2",
     "stripe": "^20.2.0"
   },
   "devDependencies": {
